--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<h1>Tweetscope </h1>
+<h1>Tweetscope - V1</h1>
+<hr>
 <%= yield %>
-
+<hr>
+<div style="text-align: center">Tweetscope - playing with heroku</div>
 </body>
 </html>
